[gd_scene load_steps=3 format=3 uid="uid://bv5im1c72e8ty"]

[ext_resource type="Theme" uid="uid://bnf7v8hqpi2kh" path="res://themes/button.tres" id="1_hf53u"]
[ext_resource type="Script" uid="uid://diq6srlblaol7" path="res://scripts/pause_menu.gd" id="1_iyb4f"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_iyb4f")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0745098, 0.0745098, 0.196078)

[node name="container" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="btn_resume" type="Button" parent="container"]
layout_mode = 2
theme = ExtResource("1_hf53u")
text = "RESUME"

[node name="btn_quit" type="Button" parent="container"]
layout_mode = 2
theme = ExtResource("1_hf53u")
text = "QUIT"

[connection signal="pressed" from="container/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="container/btn_quit" to="." method="_on_btn_quit_pressed"]
